--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ pygobject==3.27.3
 PyJWT==1.3.0
 PyMySQL3==0.5
 pyparsing==2.0.3
-python-apt==1.1.0b1
+python-apt==0.7.8
 python-debian==0.1.27
 python-systemd==231
 pytz==2017.3
